Fix colour contrast on home page Publications section

--- a/themes/global-governance-lab-theme/static/css/main.css
+++ b/themes/global-governance-lab-theme/static/css/main.css
@@ -437,7 +437,9 @@ body.noScroll {
 .text-green { 
     color: #70B243   !important;
 }
-
+.text-dark-gray { 
+    color: #666666;
+}
 
 
 
